--- a/Quinto dia/Peaky_Blinders.html
+++ b/Quinto dia/Peaky_Blinders.html
@@ -6,6 +6,7 @@
     <title>Peaky Blinders - Fanpage</title>
     <link rel="stylesheet" href="style.css">
     <script src="java.js" defer></script>
+    <link rel="icon" href="./img/Netflix.png">
 </head>
 <body>
     <!-- Barra de navegación -->
@@ -32,7 +33,7 @@
         </nav>
     </header>
 
-    <!-- Sección de Hero (Banner de la serie) -->
+    <!--Banner de la serie -->
     <section id="inicio" class="hero">
         <div class="hero-content">
             <img src="./img/logo.png" alt="">
@@ -52,7 +53,7 @@
         </ul>
     </section>
 
-    <!-- Sección de video o trailer -->
+    <!-- Sección de trailer -->
     <section id="video" class="video-container">
         <h3>Trailer Oficial</h3>
         <div class="video-wrapper">
