acabado plantilla de riot game

--- a/Septo dia/prueba.html
+++ b/Septo dia/prueba.html
@@ -288,6 +288,11 @@
   }
 
   /* Menú de navegación en dispositivos móviles */
+  @media (max-width: 1374px) {
+    nav{
+      gap: 7%;
+    }
+  }
   @media (max-width: 768px) {
     nav {
       display: none;
