--- a/Octavo dia/index.html
+++ b/Octavo dia/index.html
@@ -231,12 +231,12 @@ header h1 {
 .benefits-section .feature-icon {
     font-size: 3.5rem;
     margin-right: 20px;
-    color: #00b894; /* Verde brillante para los iconos */
+    color: #00b894; 
 }
 
 .benefits-section .feature-box h3 {
     font-size: 1.8rem;
-    color: #008cba; /* Azul brillante para los títulos */
+    color: #008cba;
     margin-bottom: 10px;
     font-weight: bold;
 }
