--- a/Noveno dia/brawls.html
+++ b/Noveno dia/brawls.html
@@ -252,6 +252,66 @@
             <img src="images/poco.png" alt="Poco">
             <h3>Poco</h3>
         </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
+        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+            <img src="images/shelly.png" alt="Shelly">
+            <h3>Shelly</h3>
+        </div>
     </div>
 </section>
 
