--- a/Noveno dia/brawls.html
+++ b/Noveno dia/brawls.html
@@ -212,11 +212,12 @@
         <button onclick="filterBrawlers('tanque')">Tanques</button>
         <button onclick="filterBrawlers('apoyo')">Apoyo</button>
         <button onclick="filterBrawlers('luchador')">Luchadores</button>
-        <button onclick="filterBrawlers('francotirador')">Francotiradores</button>
+        <button onclick="filterBrawlers('lanzador')">Lanzador</button>
         <button onclick="filterBrawlers('asesino')">Asesino</button>
+        <button onclick="filterBrawlers('francotirador')">francotirador</button>
     </div>
     <div class="gallery">
-        <div class="brawler-card" data-tipo="asesino" data-nombre="Kenji" onclick="showModal('Con una estética inspirada en la cultura japonesa y una historia que lo presenta como un exninja convertido en chef de sushi')">
+        <div class="brawler-card" data-tipo="asesino" data-nombre="Kenji" onclick="showModal('Kenja: Con una estética inspirada en la cultura japonesa y una historia que lo presenta como un exninja convertido en chef de sushi')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/8/87/Kenji-pfp.png/revision/latest?cb=20240830194802&path-prefix=es" alt="">
             <h3>Kenja</h3>
         </div>
@@ -224,19 +225,19 @@
             <img src="https://static.wikia.nocookie.net/brawlstars/images/c/c9/Shelly1-pfp.webp/revision/latest?cb=20231214173051&path-prefix=es" alt="Shelly">
             <h3>Shelly</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="tanque" data-nombre="Ollie" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/5/57/Ollie-pfp.png/revision/latest?cb=20241212135727&path-prefix=es" alt="Shelly">
             <h3>Ollie</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="lanzador" data-nombre="Gromp" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/9/99/Grom1pfp.png/revision/latest?cb=20231123005314&path-prefix=es" alt="Shelly">
             <h3>Gromp</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="tanque" data-nombre="Ash" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/3/36/Ash1-pfp.webp/revision/latest?cb=20231215154300&path-prefix=es" alt="Shelly">
             <h3>Ash</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="francotirador" data-nombre="Melodie" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/f/ff/Melodie1-pfp.png/revision/latest?cb=20240229104516" alt="Shelly">
             <h3>Melodie</h3>
         </div>
@@ -252,43 +253,43 @@
             <img src="https://static.wikia.nocookie.net/brawlstars/images/5/5a/Poco1-pfp.png/revision/latest?cb=20240507111121" alt="Poco">
             <h3>Poco</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="asesino" data-nombre="Edgar" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/8/8d/Edgar.png/revision/latest?cb=20201220011122&path-prefix=es" alt="Shelly">
             <h3>Edgar</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="asesino" data-nombre="Spike" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/9/97/Spike1-pfp.png/revision/latest?cb=20250301030317" alt="Shelly">
             <h3>Spike</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="tanque" data-nombre="Bibi" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/a/a1/Bibi1-pfp.png/revision/latest?cb=20220429013921" alt="Shelly">
             <h3>Bibi</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="francotirador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/1/19/Mr._P1-pfp.png/revision/latest?cb=20220429014441" alt="Shelly">
             <h3>Mr.P</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="francotirador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/7/7e/Rico1-pfp.png/revision/latest?cb=20220429011633" alt="Shelly">
             <h3>Rico</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="asesino" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/1/14/Mortis1-pfp.png/revision/latest?cb=20250301030807" alt="Shelly">
             <h3>Mortis</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="asesino" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/0/02/Eve1-pfp.png/revision/latest?cb=20231002062109" alt="Shelly">
             <h3>Eve</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="apoyo" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/0/01/Nita1-pfp.webp/revision/latest?cb=20231215160623&path-prefix=es" alt="Shelly">
             <h3>Nita</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="asesino" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/f/f4/Mico1-pfp.png/revision/latest?cb=20231224210800" alt="Shelly">
             <h3>Mico</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="francotirador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/b/bb/Squeak1-pfp.png/revision/latest?cb=20220429014621" alt="Shelly">
             <h3>Squeak</h3>
         </div>
@@ -296,7 +297,7 @@
             <img src="https://static.wikia.nocookie.net/brawlstars/images/9/95/Shade-pfp.png/revision/latest?cb=20241030195220&path-prefix=es" alt="Shelly">
             <h3>Shade</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="lanzador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/b/b7/Willow1-pfp.webp/revision/latest?cb=20231217164656&path-prefix=es" alt="Shelly">
             <h3>Willow</h3>
         </div>
