--- a/Noveno dia/brawls.html
+++ b/Noveno dia/brawls.html
@@ -301,15 +301,15 @@
             <img src="https://static.wikia.nocookie.net/brawlstars/images/b/b7/Willow1-pfp.webp/revision/latest?cb=20231217164656&path-prefix=es" alt="Shelly">
             <h3>Willow</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="lanzador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/9/9e/Juju-pfp.png/revision/latest?cb=20241030194758&path-prefix=es" alt="Shelly">
             <h3>Juju</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="apoyo" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/2/23/Kit1-pfp.png/revision/latest?cb=20231224210915" alt="Shelly">
             <h3>Kit</h3>
         </div>
-        <div class="brawler-card" data-tipo="luchador" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
+        <div class="brawler-card" data-tipo="asesino" data-nombre="shelly" onclick="showModal('Shelly', 'Escopeta de corto alcance. Su súper destruye obstáculos y empuja enemigos.')">
             <img src="https://static.wikia.nocookie.net/brawlstars/images/d/db/Chester1-pfp.png/revision/latest?cb=20221216064656" alt="Shelly">
             <h3>Chester</h3>
         </div>
